monitoring/02-prometheus/06-deploy-prometheus.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app: prometheus
spec:
  replicas: 2
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: monitor-sa
      nodeSelector:
        monitoring: 'true'
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - prometheus
              topologyKey: "kubernetes.io/hostname"
      securityContext:
        runAsUser: 1000
        runAsNonRoot: true
        fsGroup: 2000
      containers:
        - resources:
            limits:
              memory: 4Gi
              cpu: 2
            requests:
              memory: 1Gi
              cpu: 500m
          readinessProbe:
            httpGet:
              path: /-/ready
              port: web
              scheme: HTTP
            initialDelaySeconds: 180
            timeoutSeconds: 3
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          name: prometheus
          ports:
            - name: web
              containerPort: 9090
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /etc/prometheus/config
            - name: prometheus-k8s-db
              mountPath: /prometheus
              subPath: prometheus-db
            - name: prometheus-rulefiles
              mountPath: /etc/prometheus/rules/prometheus-rulefiles
          image: 'registry.cn-guangzhou.aliyuncs.com/kubecy/monitoring:prometheus_v2.53.4'
          args:
            - '--web.console.templates=/etc/prometheus/consoles'
            - '--web.console.libraries=/etc/prometheus/console_libraries'
            - '--config.file=/etc/prometheus/config/prometheus.yml'
            - '--storage.tsdb.path=/prometheus'
            - '--storage.tsdb.retention.time=7d'
            - '--web.enable-lifecycle'
            - '--storage.tsdb.no-lockfile'
            - '--web.route-prefix=/'
        - resources:
            limits:
              cpu: 100m
              memory: 50Mi
            requests:
              cpu: 100m
              memory: 50Mi
          name: config-reloader
          command:
            - /bin/prometheus-config-reloader
          ports:
            - name: reloader-web
              containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /etc/prometheus/config
            - name: prometheus-rulefiles
              mountPath: /etc/prometheus/rules/prometheus-rulefiles
          image: 'registry.cn-guangzhou.aliyuncs.com/kubecy/monitoring:prometheus-config-reloader_v0.55.1'
          args:
            - '--reload-url=http://localhost:9090/-/reload'
            - '--config-file=/etc/prometheus/config/prometheus.yml'
            - '--watched-dir=/etc/prometheus/rules/prometheus-rulefiles'
            - "--watch-interval=3s"
      volumes:
        - name: config
          configMap: 
            name: prometheus-config
        - name: prometheus-rulefiles
          configMap:
            name: prometheus-rulefiles
        - name: prometheus-k8s-db
          persistentVolumeClaim:
            claimName: prometheus-data-pvc
